added some lines

--- a/Dataset_Flowers.ipynb
+++ b/Dataset_Flowers.ipynb
@@ -22,6 +22,66 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Preprocessing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "from matplotlib import pyplot as plt \n",
+    "from PIL import Image\n",
+    "import glob\n",
+    "from skimage.io import imread\n",
+    "\n",
+    "daisy,dandelion,rose,sunflower,tulip = [],[],[],[],[]\n",
+    "\n",
+    "for filename in glob.glob('flowers/daisy/*.jpg'): # for daisies\n",
+    "    im = imread(filename,True)\n",
+    "    \n",
+    "    daisy.append(im)    \n",
+    "\n",
+    "for filename in glob.glob('flowers/dandelion/*.jpg'): # for dandelion\n",
+    "    im = imread(filename,True)\n",
+    "    dandelion.append(im)\n",
+    "    \n",
+    "for filename in glob.glob('flowers/rose/*.jpg'): # for roses\n",
+    "    im = imread(filename,True)\n",
+    "    rose.append(im)\n",
+    "    \n",
+    "for filename in glob.glob('flowers/sunflower/*.jpg'): # for sunflowers\n",
+    "    im = imread(filename,True)\n",
+    "    sunflower.append(im)\n",
+    "    \n",
+    "for filename in glob.glob('flowers/tulip/*.jpg'): # for tulip\n",
+    "    im = imread(filename,True)\n",
+    "    tulip.append(im)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(240, 320) (159, 240)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(daisy[0].shape, daisy[1].shape)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
