--- a/Dataset_Flowers.ipynb
+++ b/Dataset_Flowers.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -8,17 +15,336 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Support Vector Machine (Lester Fan)"
+    "# Support Vector Machine"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "from matplotlib import pyplot as plt \n",
+    "import glob\n",
+    "from skimage.io import imread\n",
+    "\n",
+    "daisy,dandelion,rose,sunflower,tulip = [],[],[],[],[]\n",
+    "\n",
+    "for filename in glob.glob('flowerscomp2/daisy/*.jpg'): # for daisies\n",
+    "    im = imread(filename,True).flatten()\n",
+    "    daisy.append(im)    \n",
+    "\n",
+    "for filename in glob.glob('flowerscomp2/dandelion/*.jpg'): # for dandelion\n",
+    "    im = imread(filename,True).flatten()\n",
+    "    dandelion.append(im)\n",
+    "    \n",
+    "for filename in glob.glob('flowerscomp2/rose/*.jpg'): # for roses\n",
+    "    im = imread(filename,True).flatten()\n",
+    "    rose.append(im)\n",
+    "    \n",
+    "for filename in glob.glob('flowerscomp2/sunflower/*.jpg'): # for sunflowers\n",
+    "    im = imread(filename,True).flatten()\n",
+    "    sunflower.append(im)\n",
+    "    \n",
+    "for filename in glob.glob('flowerscomp2/tulip/*.jpg'): # for tulip\n",
+    "    im = imread(filename,True).flatten()\n",
+    "    tulip.append(im)\n",
+    "    \n",
+    "daisy_arr=np.asarray(daisy)\n",
+    "dandelion_arr=np.asarray(dandelion)\n",
+    "rose_arr=np.asarray(rose)\n",
+    "sunflower_arr=np.asarray(sunflower)\n",
+    "tulip_arr=np.asarray(tulip)\n",
+    "\n",
+    "# daisy = 0, dandelion = 1, rose = 2, sunflower = 3, tulip = 4\n",
+    "daisy_labels=np.zeros((len(daisy_arr),1))\n",
+    "dandelion_labels=np.ones((len(dandelion_arr),1))\n",
+    "rose_labels=2*np.ones((len(rose_arr),1))\n",
+    "sunflower_labels=3*np.ones((len(sunflower_arr),1))\n",
+    "tulip_labels=4*np.ones((len(tulip_arr),1))\n",
+    "\n",
+    "\n",
+    "# Here are the labels and the dataset \n",
+    "labels=np.vstack((daisy_labels,dandelion_labels,rose_labels,sunflower_labels,tulip_labels))\n",
+    "dataset=np.vstack((daisy_arr,dandelion_arr,rose_arr,sunflower_arr,tulip_arr))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def makeScatterPlot(title, pointsLists, colors, markers, xlabel = '', ylabel = ''):\n",
+    "    # Create plot\n",
+    "    fig = plt.figure()\n",
+    "    ax = fig.add_subplot(1, 1, 1)\n",
+    "     \n",
+    "    for i, pointsList in enumerate(pointsLists):\n",
+    "        currColor = colors[i]\n",
+    "        currMarker = markers[i]\n",
+    "        for point in pointsList:\n",
+    "            x, y = point\n",
+    "            ax.scatter(x, y, c=currColor, marker=currMarker)\n",
+    "        \n",
+    "    # Temporary, add line\n",
+    "    axes = plt.gca()\n",
+    "    x_vals = np.array(axes.get_xlim())\n",
+    "    y_vals = 0 + 1 * x_vals\n",
+    "    plt.plot(x_vals, y_vals, '--')\n",
+    "    \n",
+    "    # plt.xlim(0, 100)\n",
+    "    # plt.ylim(0, 100)\n",
+    "    plt.title(title)\n",
+    "    plt.xlabel(xlabel)\n",
+    "    plt.ylabel(ylabel)\n",
+    "    plt.legend(loc=2)\n",
+    "    plt.show()\n",
+    "\n",
+    "def calcError(y1, y2):\n",
+    "    return 1 if y1 != y2 else 0\n",
+    "\n",
+    "def KCVsplit(k, X, y):\n",
+    "    \"\"\"\n",
+    "    Splits the training data (X) into k folds in which one fold is used for testing\n",
+    "    and all the others are used for training. Does this k times. \n",
+    "    \n",
+    "    :param int k\n",
+    "    :param np.array X\n",
+    "    :param np.array y\n",
+    "    :return: (folds, Xlist, ylist, table) where folds is a list of all \n",
+    "             the folds, Xlist is a list of np.arrays\n",
+    "             corresponding to the X used for training in each iteration \n",
+    "             (all the folds except for index i),\n",
+    "             ylist is a list of np.arrays corresponding to the y used for training\n",
+    "             and table is a hash table mapping rows in X to their corresponding\n",
+    "             label y.\n",
+    "    :rtype: tuple of (list of np.array, np.array, np.array, dict)\n",
+    "    \"\"\"\n",
+    "    Xlist = []\n",
+    "    ylist = []\n",
+    "    table = {}\n",
+    "    \n",
+    "    # Set table up\n",
+    "    for i, row in enumerate(X):\n",
+    "        table[str(row)] = y[i]\n",
+    "    \n",
+    "    # Split X up into folds\n",
+    "    stepSize = int(X.shape[0] / k) + 1\n",
+    "    steps = [min(X.shape[0], stepSize * n) for n in range(1, k)]\n",
+    "    folds = np.split(X, steps)\n",
+    "    foldLabels = np.split(y, steps)\n",
+    "    \n",
+    "    for i, currFold in enumerate(folds):\n",
+    "        # Get XTrain and yTrain with all the other folds except currFold\n",
+    "        otherFolds = [otherFold for j, otherFold in enumerate(folds) if j != i]\n",
+    "        otherFoldLabels = [label for j, label in enumerate(foldLabels) if j != i]\n",
+    "        XTrain = otherFolds[0]\n",
+    "        yTrain = otherFoldLabels[0]\n",
+    "        for j in range(1, len(otherFolds)):\n",
+    "            XTrain = np.append(XTrain, otherFolds[j], axis=0)\n",
+    "            yTrain = np.append(yTrain, otherFoldLabels[j], axis=0)\n",
+    "        Xlist.append(XTrain)\n",
+    "        ylist.append(yTrain)\n",
+    "    \n",
+    "    return (folds, Xlist, ylist, table)\n",
+    "\n",
+    "def performValidation(k, X, y, model, plotDiffs = False):\n",
+    "    \"\"\"\n",
+    "    Performs cross validation\n",
+    "    \"\"\"\n",
+    "    folds, Xlist, ylist, table = KCVsplit(k, X, y)\n",
+    "    \n",
+    "    confusionMatrices = []\n",
+    "    foldSizes = []\n",
+    "    \n",
+    "    # For each fold i, use i as testing, and use all the other\n",
+    "    # i - 1 folds for training. Calculate the errors for each and store\n",
+    "    # them in avgErrors\n",
+    "    predTable = {}\n",
+    "    avgErrors = []\n",
+    "    for i in range(len(Xlist)):\n",
+    "        currFold = folds[i]\n",
+    "        XTrain = Xlist[i]\n",
+    "        yTrain = ylist[i]\n",
+    "        \n",
+    "        # Make a confusion matrix\n",
+    "        confusionMatrix = [[0 for c in range(5)] for r in range(5)]\n",
+    "        \n",
+    "        # Train the model\n",
+    "        model.fit(XTrain, yTrain)\n",
+    "        \n",
+    "        # Now, evaluate the trained model against the actual labels,\n",
+    "        # keep track of total error!\n",
+    "        totalError = 0\n",
+    "        for row in currFold:\n",
+    "            \n",
+    "            # Get the current predicted value\n",
+    "            currRow = row.reshape(1, -1)\n",
+    "            yPredicted = model.predict(currRow)\n",
+    "            \n",
+    "            predicted = yPredicted[0]\n",
+    "            actual = table[str(row)][0]\n",
+    "            \n",
+    "            # Update the confusion matrix\n",
+    "            confusionMatrix[int(predicted)][int(actual)] += 1\n",
+    "            \n",
+    "            totalError += calcError(predicted, actual)\n",
+    "            predTable[str(row)] = yPredicted\n",
+    "        # totalError /= len(currFold)\n",
+    "        avgErrors.append(totalError)\n",
+    "        foldSizes.append(len(currFold))\n",
+    "        confusionMatrices.append(np.array(confusionMatrix))\n",
+    "          \n",
+    "    predictions = []\n",
+    "    actuals = []\n",
+    "    plotPoints = []\n",
+    "    for row in X:\n",
+    "        hashVal = str(row)\n",
+    "        predictions.append(predTable[hashVal][0])\n",
+    "        actuals.append(table[hashVal][0])\n",
+    "    plotPoints = [(predictions[i], actuals[i]) for i in range(len(actuals))]\n",
+    "\n",
+    "    # Optionally, plot the measured vs predicted values\n",
+    "    if plotDiffs:\n",
+    "        makeScatterPlot(\"Measured vs Predicted\", \n",
+    "                        [plotPoints], \n",
+    "                        ['r'], \n",
+    "                        ['.'],\n",
+    "                        'Predicted',\n",
+    "                        'Actual')\n",
+    "    return avgErrors, foldSizes, confusionMatrices\n",
+    "\n",
+    "def normalize(A):\n",
+    "    stds = [np.std(A[r,:]) for r in range(A.shape[0])]\n",
+    "    for r in range(A.shape[0]):\n",
+    "        A[r,:] /= stds[r]\n",
+    "    return A\n",
+    "\n",
+    "def centralize(A):\n",
+    "    means = [np.mean(A[r,:]) for r in range(A.shape[0])]\n",
+    "    for r in range(A.shape[0]):\n",
+    "        A[r,:] -= means[r]\n",
+    "    return A\n",
+    "\n",
+    "def unisonShuffledCopies(a, b):\n",
+    "    assert len(a) == len(b)\n",
+    "    p = np.random.permutation(len(a))\n",
+    "    return a[p], b[p]\n",
+    "\n",
+    "def PCA(A, numComponents):\n",
+    "    # First, center the data\n",
+    "    A = normalize(centralize(A))\n",
+    "    \n",
+    "    # Now, compute the SVD, and reduce the dimensions of A.\n",
+    "    U, Sigma, Vt = np.linalg.svd(A)\n",
+    "    D = np.matmul(A.T, U[:,:numComponents])\n",
+    "    \n",
+    "    return D.T"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(4321L, 10000L)\n",
+      "(4321L, 10000L)\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.svm import SVC\n",
+    "model = SVC()\n",
+    "print dataset.shape\n",
+    "pcaData = PCA(dataset.T, 100).T\n",
+    "pcaData = dataset\n",
+    "print pcaData.shape\n",
+    "k = 5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Confusion Matrix 0\n",
+      "[[  8   9   5   3   9]\n",
+      " [ 83 130  68  82 109]\n",
+      " [  6   5   4   5   7]\n",
+      " [  2   1   1   2   0]\n",
+      " [ 68  76  54  52  76]]\n",
+      "Accuracy rate = 0.254335260116\n",
+      "\n",
+      "Confusion Matrix 1\n",
+      "[[  4   7   5   5   9]\n",
+      " [ 85 130  96  76 108]\n",
+      " [  3   2   2   1   3]\n",
+      " [  0   3   1   2   0]\n",
+      " [ 59  72  55  58  79]]\n",
+      "Accuracy rate = 0.250867052023\n",
+      "\n",
+      "Confusion Matrix 2\n",
+      "[[  4  10   3   9  10]\n",
+      " [ 70 117  96  94 105]\n",
+      " [  3   2   2   0   1]\n",
+      " [  1   1   1   1   4]\n",
+      " [ 65  75  68  51  72]]\n",
+      "Accuracy rate = 0.226589595376\n",
+      "\n",
+      "Confusion Matrix 3\n",
+      "[[  6   5   4   5   6]\n",
+      " [ 74 108  72  78 101]\n",
+      " [  3   8   0   3   4]\n",
+      " [  0   1   0   2   0]\n",
+      " [ 65  99  75  58  88]]\n",
+      "Accuracy rate = 0.235838150289\n",
+      "\n",
+      "Confusion Matrix 4\n",
+      "[[  6   3   6   1   9]\n",
+      " [100 126 104  89 114]\n",
+      " [  1   7   2   2   0]\n",
+      " [  0   3   0   2   0]\n",
+      " [ 52  54  59  52  69]]\n",
+      "Accuracy rate = 0.238095238095\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "pcaData, labels = unisonShuffledCopies(pcaData, labels)\n",
+    "errors, foldSizes, confusionMatrices = performValidation(k, pcaData, labels, model)\n",
+    "for i, confusionMatrix in enumerate(confusionMatrices):\n",
+    "    print(\"Confusion Matrix {}\".format(i))\n",
+    "    print(confusionMatrix)\n",
+    "    print(\"Accuracy rate = {}\".format(1 - float(errors[i]) / foldSizes[i]))\n",
+    "    print(\"\")\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# k-Means Clustering (Anton Maliev)"
+    "# k-Nearest Neighbor"
    ]
   },
   {
@@ -403,21 +729,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.15"
   }
  },
  "nbformat": 4,
