Working on clustering dataset

--- a/Dataset_ExamGrades.ipynb
+++ b/Dataset_ExamGrades.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Note: this dataset was used in place of the Households with Married Couples dataset. We were planning to regress on the number of U.S. households with married couples by year. However, were realized that the dataset was very small (~70 one-dimensional samples), so the result would be easily to predict with maximum possible accuracy by simply using an interpolating polynomial or similar method. Thus we decided on this dataset to run regression on, since it contains 1000 multi-dimensional inputs."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Preprocessing"
    ]
   },
