--- a/Dataset_Flowers.ipynb
+++ b/Dataset_Flowers.ipynb
@@ -463,25 +463,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 69,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(4321, 10000)\n",
-      "(4321, 10000)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sklearn.svm import SVC\n",
     "model = SVC()\n",
-    "print(dataset.shape)\n",
     "pcaData = PCA(dataset.T, 100).T\n",
-    "pcaData = dataset\n",
-    "print(pcaData.shape)\n",
     "k = 5"
    ]
   },
@@ -509,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -520,86 +508,51 @@
     "    # Split training data and calculate means and standard deviations\n",
     "    train = []; means = []; stds = [];\n",
     "    for i in range(5) :\n",
-    "        train.append(training[np.ix_((0,1),np.where(trlabels==0)[1])]);\n",
+    "        train.append(training[np.ix_((0,np.shape(training)[0]),np.where(trlabels==i)[1])]);\n",
     "        means.append(train[i].mean(1));\n",
     "        stds.append(train[i].std(1));\n",
-    "#     means = np.concatenate((np.concatenate((train0.mean(1),train1.mean(1)),1),train2.mean(1)),1);\n",
-    "#     stds = np.concatenate((np.concatenate((train0.std(1),train1.std(1)),1),train2.std(1)),1);\n",
+    "        print(np.shape(means),np.shape(stds));\n",
     "    # Classify each test datum based on Gaussian output\n",
     "    result = [];\n",
-    "    for i in range(len(result)) :\n",
-    "        x = [];\n",
-    "        for j in range(dim) :\n",
-    "            x.append(test[j,i]);\n",
-    "#         x1 = test[0,i];\n",
-    "#         x2 = test[1,i];\n",
+    "    for i in range(np.shape(test)[1]) :\n",
+    "        x = test[:,i];\n",
     "        prob = [];\n",
     "        for j in range(5) :\n",
     "            gauss = 1;\n",
     "            for k in range(dim) :\n",
-    "                gauss *= Gaussian(x[k],means[k,j],stds[k,j],np.shape(x)[1])\n",
+    "                gauss *= Gaussian(x[j],means[j][k],stds[j][k],np.shape(x)[1])\n",
     "            prob.append();\n",
-    "#         prob[0] = Gaussian(x1,means[0,0],stds[0,0]) * Gaussian(x2,means[1,0],stds[1,0]);\n",
-    "#         prob[1] = Gaussian(x1,means[0,1],stds[0,1]) * Gaussian(x2,means[1,1],stds[1,1]);\n",
-    "#         prob[2] = Gaussian(x1,means[0,2],stds[0,2]) * Gaussian(x2,means[1,2],stds[1,2]);\n",
     "        result.append(np.argmax(prob));\n",
     "    return result;"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(4321, 10000) (4321, 1)\n",
-      "0\n"
+      "100 (100, 0) (3457, 1) (100, 100)\n"
      ]
     },
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\the_a\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:9: RuntimeWarning: Mean of empty slice.\n",
-      "  if __name__ == '__main__':\n",
-      "C:\\Users\\the_a\\Anaconda3\\lib\\site-packages\\numpy\\core\\_methods.py:73: RuntimeWarning: invalid value encountered in true_divide\n",
-      "  ret, rcount, out=ret, casting='unsafe', subok=False)\n",
-      "C:\\Users\\the_a\\Anaconda3\\lib\\site-packages\\numpy\\core\\_methods.py:135: RuntimeWarning: Degrees of freedom <= 0 for slice\n",
-      "  keepdims=keepdims)\n",
-      "C:\\Users\\the_a\\Anaconda3\\lib\\site-packages\\numpy\\core\\_methods.py:105: RuntimeWarning: invalid value encountered in true_divide\n",
-      "  arrmean, rcount, out=arrmean, casting='unsafe', subok=False)\n",
-      "C:\\Users\\the_a\\Anaconda3\\lib\\site-packages\\numpy\\core\\_methods.py:125: RuntimeWarning: invalid value encountered in true_divide\n",
-      "  ret, rcount, out=ret, casting='unsafe', subok=False)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n",
-      "2\n",
-      "3\n",
-      "4\n"
-     ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "operands could not be broadcast together with shapes (0,) (864,) ",
+     "ename": "IndexError",
+     "evalue": "index 100 is out of bounds for axis 0 with size 100",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-27-eb8ea1f6b415>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     28\u001b[0m \u001b[0maccs\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m;\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     29\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m5\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 30\u001b[1;33m     \u001b[0maccs\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mwhere\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkcross\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m-\u001b[0m\u001b[0mpcad\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mfolds\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m:\u001b[0m\u001b[0mfolds\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m/\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfolds\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m-\u001b[0m\u001b[0mfolds\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m;\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     31\u001b[0m \u001b[1;31m#     accs.append(len(np.where(kcross[i]-feat2a[2,36:72] == 0)[1])/36);\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     32\u001b[0m \u001b[1;31m#     accs.append(len(np.where(kcross[i]-feat2a[2,72:108] == 0)[1])/36);\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mValueError\u001b[0m: operands could not be broadcast together with shapes (0,) (864,) "
+      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-75-5a57a38ebdfd>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     11\u001b[0m     \u001b[0mtst\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpcad\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m:\u001b[0m\u001b[0mM\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mfolds\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m:\u001b[0m\u001b[0mfolds\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m;\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     12\u001b[0m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mM\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtrs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlbs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtst\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m;\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 13\u001b[1;33m     \u001b[0mkcross\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mNBClassifier\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtrs\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mlbs\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mtst\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mM\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m;\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     14\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     15\u001b[0m \u001b[0maccs\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m;\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-70-12ea20a38ee1>\u001b[0m in \u001b[0;36mNBClassifier\u001b[1;34m(training, trlabels, test, dim)\u001b[0m\n\u001b[0;32m      6\u001b[0m     \u001b[0mtrain\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m;\u001b[0m \u001b[0mmeans\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m;\u001b[0m \u001b[0mstds\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m;\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m     \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m5\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 8\u001b[1;33m         \u001b[0mtrain\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtraining\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mix_\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtraining\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mwhere\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtrlabels\u001b[0m\u001b[1;33m==\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m;\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      9\u001b[0m         \u001b[0mmeans\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtrain\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmean\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m;\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     10\u001b[0m         \u001b[0mstds\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtrain\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mstd\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m;\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mIndexError\u001b[0m: index 100 is out of bounds for axis 0 with size 100"
      ]
     }
    ],
    "source": [
     "pcad, labels = unisonShuffledCopies(pcaData, labels);\n",
-    "print(np.shape(pcad),np.shape(labels));\n",
     "\n",
     "N = np.shape(pcad)[0];\n",
     "M = np.shape(pcad)[1];\n",
@@ -607,31 +560,15 @@
     "\n",
     "kcross = [];\n",
     "for i in range(5) :\n",
-    "    print(i);\n",
-    "    trs = np.concatenate((pcad[0:M,0:folds[i+1]],pcad[0:M,folds[i+1]:folds[5]]),1);\n",
-    "    lbs = np.concatenate((pcad[0:folds[i+1]],pcad[folds[i+1]:folds[5]]),0);\n",
+    "    trs = np.concatenate((pcad[0:M,0:folds[i]],pcad[0:M,folds[i+1]:folds[5]]),1);\n",
+    "    lbs = np.concatenate((labels[0:folds[i]],labels[folds[i+1]:folds[5]]),0);\n",
     "    tst = pcad[0:M,folds[i]:folds[i+1]];\n",
+    "    print(M,np.shape(trs),np.shape(lbs),np.shape(tst));\n",
     "    kcross.append(NBClassifier(trs,lbs,tst,M));\n",
-    "\n",
-    "# kcross1 = NBClassifier(feat2a[0:2,36:178],feat2a[2,36:178],feat2a[0:2,0:36]);\n",
-    "# train2 = np.concatenate((feat2a[0:2,0:36],feat2a[0:2,72:178]),1);\n",
-    "# labels2 = np.concatenate((feat2a[2,0:36],feat2a[2,72:178]),1);\n",
-    "# kcross2 = NBClassifier(train2,labels2,feat2a[0:2,36:72]);\n",
-    "# train3 = np.concatenate((feat2a[0:2,0:72],feat2a[0:2,108:178]),1);\n",
-    "# labels3 = np.concatenate((feat2a[2,0:72],feat2a[2,108:178]),1);\n",
-    "# kcross3 = NBClassifier(train3,labels3,feat2a[0:2,72:108]);\n",
-    "# train4 = np.concatenate((feat2a[0:2,0:108],feat2a[0:2,143:178]),1);\n",
-    "# labels4 = np.concatenate((feat2a[2,0:108],feat2a[2,143:178]),1);\n",
-    "# kcross4 = NBClassifier(train4,labels4,feat2a[0:2,108:143]);\n",
-    "# kcross5 = NBClassifier(feat2a[0:2,0:143],feat2a[2,0:143],feat2a[0:2,143:178]);\n",
     "\n",
     "accs = [];\n",
     "for i in range(5) :\n",
-    "    accs.append(len(np.where(kcross[i]-pcad[2,folds[i]:folds[i+1]] == i)[1])/(folds[i+1]-folds[i]));\n",
-    "#     accs.append(len(np.where(kcross[i]-feat2a[2,36:72] == 0)[1])/36);\n",
-    "#     accs.append(len(np.where(kcross[i]-feat2a[2,72:108] == 0)[1])/36);\n",
-    "#     accs.append(len(np.where(kcross[i]-feat2a[2,108:143] == 0)[1])/36);\n",
-    "#     accs.append(len(np.where(kcross[i]-feat2a[2,143:178] == 0)[1])/36);\n",
+    "    accs.append(len(np.where(kcross[i]-labels[folds[i]:folds[i+1]] == 0)[1])/(folds[i+1]-folds[i]));\n",
     "\n",
     "print(\"The accuracies for the five folds are: \",accs);\n",
     "print(\"Mean: \",np.mean(accs));\n",
