--- a/Dataset_Flowers.ipynb
+++ b/Dataset_Flowers.ipynb
@@ -497,57 +497,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy.linalg as la;\n",
     "def Gaussian(x, mean, cov, dim) :\n",
-    "    return 1/np.sqrt((2*np.pi)**dim*la.norm(x))*np.exp(-np.matmul(np.matmul(np.transpose(x-mean),np.inv(cov)),x-mean)/2);\n",
+    "    return 1/np.sqrt((2*np.pi)**dim*la.norm(x))*np.exp(-np.matmul(np.matmul(np.transpose(x-mean),la.inv(cov)),x-mean)/2);\n",
     "def NBClassifier(training, trlabels, test, dim) :\n",
     "    # Split training data and calculate means and standard deviations\n",
     "    train = []; means = []; stds = [];\n",
     "    for i in range(5) :\n",
-    "        train.append(training[np.ix_((0,np.shape(training)[0]),np.where(trlabels==i)[1])]);\n",
+    "        train.append(training[np.ix_(np.arange(np.shape(training)[0]),np.where(trlabels==i)[0])]);\n",
     "        means.append(train[i].mean(1));\n",
-    "        stds.append(train[i].std(1));\n",
-    "        print(np.shape(means),np.shape(stds));\n",
+    "        stds.append(np.cov(train[i]));\n",
     "    # Classify each test datum based on Gaussian output\n",
     "    result = [];\n",
     "    for i in range(np.shape(test)[1]) :\n",
     "        x = test[:,i];\n",
     "        prob = [];\n",
     "        for j in range(5) :\n",
-    "            gauss = 1;\n",
-    "            for k in range(dim) :\n",
-    "                gauss *= Gaussian(x[j],means[j][k],stds[j][k],np.shape(x)[1])\n",
-    "            prob.append();\n",
+    "            prob.append(Gaussian(x[j],means[j],stds[j],len(x)));\n",
     "        result.append(np.argmax(prob));\n",
     "    return result;"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "100 (100, 3457) (3457, 1) (100, 864)\n"
-     ]
-    },
-    {
-     "ename": "IndexError",
-     "evalue": "index 100 is out of bounds for axis 0 with size 100",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-92-60bda70eeedc>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     14\u001b[0m     \u001b[0mtst\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpcad\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m:\u001b[0m\u001b[0mM\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mind1\u001b[0m\u001b[1;33m:\u001b[0m\u001b[0mind2\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m;\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     15\u001b[0m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mM\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtrs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlbs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtst\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m;\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 16\u001b[1;33m     \u001b[0mkcross\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mNBClassifier\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtrs\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mlbs\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mtst\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mM\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m;\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     17\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     18\u001b[0m \u001b[0maccs\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m;\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m<ipython-input-70-12ea20a38ee1>\u001b[0m in \u001b[0;36mNBClassifier\u001b[1;34m(training, trlabels, test, dim)\u001b[0m\n\u001b[0;32m      6\u001b[0m     \u001b[0mtrain\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m;\u001b[0m \u001b[0mmeans\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m;\u001b[0m \u001b[0mstds\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m;\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m     \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m5\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 8\u001b[1;33m         \u001b[0mtrain\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtraining\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mix_\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtraining\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mwhere\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtrlabels\u001b[0m\u001b[1;33m==\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m;\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      9\u001b[0m         \u001b[0mmeans\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtrain\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmean\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m;\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     10\u001b[0m         \u001b[0mstds\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtrain\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mstd\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m;\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mIndexError\u001b[0m: index 100 is out of bounds for axis 0 with size 100"
+      "The accuracies for the five folds are:  [0.18171296296296297, 0.21875, 0.2037037037037037, 0.17939814814814814, 0.21965317919075145]\n",
+      "Mean:  0.2006435988011132\n",
+      "Standard deviation:  0.017368409827409406\n"
      ]
     }
    ],
@@ -559,6 +545,7 @@
     "N = np.shape(pcad)[1];\n",
     "folds = [0,N//5,2*N//5,3*N//5,4*N//5,N];\n",
     "\n",
+    "# Cycle through folds and run classifier on training + test\n",
     "kcross = [];\n",
     "for i in range(5) :\n",
     "    ind1 = folds[i];\n",
@@ -568,9 +555,11 @@
     "    tst = pcad[0:M,ind1:ind2];\n",
     "    kcross.append(NBClassifier(trs,lbs,tst,M));\n",
     "\n",
+    "# Use array of differences to compute accuracy\n",
     "accs = [];\n",
     "for i in range(5) :\n",
-    "    accs.append(len(np.where(kcross[i]-labels[folds[i]:folds[i+1]] == 0)[1])/(folds[i+1]-folds[i]));\n",
+    "    difarray = kcross[i]-labels[folds[i]:folds[i+1]].T;\n",
+    "    accs.append(len(np.where(difarray == 0)[1])/(folds[i+1]-folds[i]));\n",
     "\n",
     "print(\"The accuracies for the five folds are: \",accs);\n",
     "print(\"Mean: \",np.mean(accs));\n",
