Added final project file

--- a/Dataset_Flowers.ipynb
+++ b/Dataset_Flowers.ipynb
@@ -8,6 +8,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This dataset is provided in the form of about 4000 labeled images of different sizes of 5 types of flowers. Our goal for the assignment is to predict the type of flower based on the image. This proves to be much more difficult than our toy datasets from class. Most of the components carry some energy, so any substantial PCA greatly reduces the energy content of the data. In addition, going through the pictures by inspection, they all contain different lighting, background, and size of flower. We believe that more advanced methods are necessary to classify these images with substantial accuracy. In the preprocessing stage, we experiment with different degrees of image size reduction, as well as different #s of PCA features. We can't find a balance between computational complexity and accuracy of classification."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
@@ -210,6 +217,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here the kNN algorithm is run and cross validated on five folds and returns a confusion matrix afterwards. Just like the components, there is minimal benefit with increasing the amount of nearest neighbors after a certain point. We present three various nearest neighbors that illustrate this (although we tried with many more points)."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -312,6 +326,13 @@
    "metadata": {},
    "source": [
     "# Support Vector Machine (Lester Fan)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here we run a support vector machine on the PCA'd data. The resulting accuracy is lower than kNN, but still higher than random guessing."
    ]
   },
   {
@@ -496,8 +517,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here we run a support vector machine on the PCA'd data. The resulting accuracy is lower than kNN, but still higher than random guessing."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -517,23 +545,23 @@
     "        x = test[:,i];\n",
     "        prob = [];\n",
     "        for j in range(5) :\n",
-    "            prob.append(Gaussian(x[j],means[j],stds[j],len(x)));\n",
+    "            prob.append(Gaussian(x,means[j],stds[j],len(x)));\n",
     "        result.append(np.argmax(prob));\n",
     "    return result;"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 165,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The accuracies for the five folds are:  [0.18171296296296297, 0.21875, 0.2037037037037037, 0.17939814814814814, 0.21965317919075145]\n",
-      "Mean:  0.2006435988011132\n",
-      "Standard deviation:  0.017368409827409406\n"
+      "The accuracies for the five folds are:  [0.20023148148148148, 0.20601851851851852, 0.21643518518518517, 0.22337962962962962, 0.1976878612716763]\n",
+      "Mean:  0.2087505352172982\n",
+      "Standard deviation:  0.009751771070704407\n"
      ]
     }
    ],
